Updated the publication type text color to 65697C instead of #000000 and font to rockwell, Applied 2 column/cards for resolution between 576px and 1024px, Text color for the card's CTA needs to be corrected. Please update it to Abcam's green, Reduce the horizontal gap between cards/columns to 24px

--- a/eds/blocks/story-hub/story-hub.css
+++ b/eds/blocks/story-hub/story-hub.css
@@ -185,6 +185,15 @@
        column-gap: 0.5rem
 }
 
+.story-hub-wrapper :is(.gap-x-6) {
+  -moz-column-gap: 1.5rem;
+       column-gap: 1.5rem
+}
+
+.story-hub-wrapper :is(.gap-y-10) {
+  row-gap: 2.5rem
+}
+
 .story-hub-wrapper :is(.overflow-visible) {
   overflow: visible
 }
@@ -390,6 +399,15 @@
     grid-template-columns: repeat(2, minmax(0, 1fr))
   }
 
+  .story-hub-wrapper :is(.md\:gap-x-16) {
+    -moz-column-gap: 4rem;
+         column-gap: 4rem
+  }
+
+  .story-hub-wrapper :is(.md\:gap-y-16) {
+    row-gap: 4rem
+  }
+
   .story-hub-wrapper :is(.md\:px-0) {
     padding-left: 0px;
     padding-right: 0px
@@ -439,6 +457,12 @@
 
   .story-hub-wrapper :is(.lg\:gap-16) {
     gap: 4rem
+  }
+}
+
+@media (min-width: 1280px) {
+  .story-hub-wrapper :is(.xl\:grid-cols-3) {
+    grid-template-columns: repeat(3, minmax(0, 1fr))
   }
 }
 
